--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -15,10 +15,10 @@ jobs:
         uses: actions/checkout@v3
       
       - name: Install Dev depedencies
-        run: sudo ./install-dev-requirements.sh
-
+        run: sudo ./package-install-dev-dependencies.sh
+      
       - name: Build Package
-        run: ./package.sh
+        run: ./package-build.sh
 
       - name: Install Package
         run: |
@@ -26,9 +26,7 @@ jobs:
 
       - name: Test
         run: |
-          sudo systemctl enable --now vpngate.service
-          sudo systemclt status vpngate.service
-          sudo systemctl stop vpngate.service
+          sudo ./package-test.sh
 
       - name: Publish Package
         run: |
