--- a/package/usr/lib/systemd/system/vpngate.service
+++ b/package/usr/lib/systemd/system/vpngate.service
@@ -5,6 +5,8 @@ After=network-online.target
 ExecStart=/usr/lib/vpngate/vpngate-client
 RestartSec=10
 Restart=on-failure
+WorkingDirectory=/run/vpngate/
+RuntimeDirectory=vpngate
 
 [Install]
 WantedBy=multi-user.target
