--- a/.pylintrc
+++ b/.pylintrc
@@ -89,6 +89,14 @@ disable=raw-checker-failed,
         missing-function-docstring,
         missing-class-docstring,
         line-too-long,
+        missing-module-docstring,
+        invalid-name,
+        wrong-import-order,
+        consider-using-f-string,
+        fixme,
+        no-else-return,
+        too-many-locals,
+        unspecified-encoding
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
